<resources>
    <string name="app_name">Integration</string>
    <string name="app_name_long">Markus\' stuff</string>

    <string name="title_activity_settings">Settings</string>

    <string name="ip_address">Computer IP address</string>
    <string name="auth">Authentication</string>
    <string name="port">Port</string>
    <string name="authcode">Authentication code</string>
    <string name="mac_address">MAC address</string>
    <string name="version">Version</string>
    <string name="app_name_setting">App name</string>

    <!-- UI -->
    <string name="packetFail">Failed to wake computer</string>
    <string name="packetSent">Waking up computer…</string>
    <string name="teave_arvuti_kohta">About computer</string>
    <string name="arvuti_ratamine">Wake computer</string>
    <string name="laadi_uuesti">Reload</string>
    <string name="seaded">Settings</string>
    <string name="rakendus">Application</string>
    <string name="konfiguratsioon">Configuration</string>
    <string name="kuva_markuse_asjade_logo_k_ivitumisel">Show Markus\' stuff logo on startup</string>
    <string name="luba_ajastatud_s_ndmused">Enable scheduled tasks</string>
    <string name="k_ivita_t_lauam_rkmed_k_ivitumisel">Show desktop notes on startup</string>
    <string name="pollimise_sagedus">Poll rate:</string>
    <string name="v_rvid">Colors</string>
    <string name="taust">Background</string>
    <string name="esiplaan">Foreground</string>
    <string name="ikoonid">Icons</string>
    <string name="ikoonide_arv">Icon count</string>
    <string name="veeris_px">Margin (px)</string>
    <string name="suurus_suhteline">Size (relative)</string>
    <string name="lukusta_ikoonid">Lock icons</string>
    <string name="rakendused">Applications</string>
    <string name="varia">Miscellaneous</string>
    <string name="kuva_t_lauaikoonid">Show desktop icons</string>
    <string name="kuva_markuse_asjad_logo">Show Markus\' stuff logo</string>
    <string name="kuva_juhtnupud">Show controls</string>
    <string name="monitori_re_iim">Monitor mode</string>
    <string name="luba_introd">Enable intros</string>
    <string name="creepypasta_intro">Creepypasta intro (MarkuStation 1)</string>
    <string name="p_randintro">Legacy intro (MarkuStation 2)</string>
    <string name="special_intro">Special intro (MarkuStation 1)</string>
    <string name="vali_taustav_rv">Choose background color</string>
    <string name="vali_esiplaani_v_rv">Choose foreground color</string>
    <string name="uudised">News</string>
    <string name="markustation" translatable="false">MarkuStation</string>
    <string name="t_laud">Desktop</string>
    <string name="teave">About</string>
    <string name="v_ljaanne">"Edition: "</string>
    <string name="versioon">"Version: "</string>
    <string name="nimi">"Name: "</string>
    <string name="j_rk">"Build: "</string>
    <string name="testitud">"Tested: "</string>
    <string name="kasutajanimi">"Username: "</string>
    <string name="keel">"Language: "</string>
    <string name="tuuma_versioon">"Kernel versioon: "</string>
    <string name="funktsioonid">"Features: "</string>
    <string name="integratsioonitarkvara">Integration software</string>
    <string name="windows_10" translatable="false">Windows 10+</string>
    <string name="rainmeter" translatable="false">Rainmeter</string>
    <string name="grupipoliitika">Group policy</string>
    <string name="livetuner_optimeerimised">LiveTuner optimizations</string>
    <string name="desktopx" translatable="false">DesktopX</string>
    <string name="klassikaline_start_men">Classic start menu</string>
    <string name="kaugjuhtimine">Remote management</string>
    <string name="interaktiivne_t_laud">Interactive desktop</string>
    <string name="standardfunktsioonid">Standard features</string>
    <string name="markuse_asjade_tugi">Markus\' stuff support</string>
    <string name="ebaturvaline_pin_kood">"Insecure PIN code: "</string>
    <string name="verifile_r_si">"Verifile hash: "</string>
    <string name="monitor_internal">Only primary display</string>
    <string name="monitor_external">Only external display</string>
    <string name="monitor_duplicate">Clone</string>
    <string name="monitor_extend">Extend</string>
    <string name="andmete_laadimine_eba_nnestus">Failed to load data</string>
    <string name="kontrolli_v_rgu_hendust_ja_veendu_et_api_server_oleks_aktiivne">Check network connection and ensure that the API server is running</string>
    <string name="preference_category_wol">Wake on LAN</string>
    <string name="preference_category_about">About</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="background_images">Background images</string>
    <string name="desktop_background">Desktop background</string>
    <string name="login_screen">Login screen</string>
    <string name="miniversion">Miniversion</string>
    <string name="device_background">Device background</string>
    <string name="device_lock_screen">Device lock screen</string>
    <string name="downloading_background">Downloading background</string>
    <string name="success">Success!</string>
    <string name="games">Games</string>
    <string name="defaultIp" translatable="false">192.168.1.201</string>
    <string name="defaultPort" translatable="false">14415</string>
    <string name="location">Location:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="icon">Icon</string>
    <string name="command_line">Command line:</string>
    <string name="edit_game">Edit game</string>
    <string name="edit_desktop_icon">Edit desktop icon</string>
    <string name="add">Add</string>
    <string name="add_desktop_icon">Add desktop icon</string>
    <string name="apply">Apply</string>
    <string name="markuse_arvuti_asjad">Markus\' computer stuff</string>
    <string name="unknown_edition">Unknown edition</string>
</resources>