<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/auth">

        <EditTextPreference
            app:key="ip"
            app:title="@string/ip_address"
            app:defaultValue="192.168.1.201"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="port"
            app:title="@string/port"
            app:defaultValue="14415"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="code"
            app:title="@string/authcode"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_category_wol">
        <EditTextPreference
            app:key="wol-mac"
            app:title="@string/mac_address"
            app:defaultValue="00:00:00:00:00:00"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="wol-port"
            app:title="@string/port"
            app:defaultValue="9"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/preference_category_about">
        <EditTextPreference
            app:key="app-package"
            app:title="@string/app_name_setting"
            app:defaultValue="@string/app_name"
            app:useSimpleSummaryProvider="true"
            app:enabled="false"/>
        <EditTextPreference
            app:key="app-version"
            app:title="@string/version"
            app:defaultValue="@android:string/unknownName"
            app:useSimpleSummaryProvider="true"
            app:enabled="false"/>
    </PreferenceCategory>
</PreferenceScreen>