<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".ConfigFragment">

    <LinearLayout
        android:id="@+id/configLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/error"
            android:name="ee.mas.integratsioonitarkvara.ErrorFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1sp"
            android:layout_marginTop="1sp"
            android:text="@string/konfiguratsioon"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/logoCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logoCheckboxClick"
            android:text="@string/kuva_markuse_asjade_logo_k_ivitumisel" />

        <CheckBox
            android:id="@+id/scheduleCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logoCheckboxClick"
            android:text="@string/luba_ajastatud_s_ndmused" />

        <CheckBox
            android:id="@+id/desktopNotesCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logoCheckboxClick"
            android:text="@string/k_ivita_t_lauam_rkmed_k_ivitumisel" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pollimise_sagedus" />

        <EditText
            android:id="@+id/pollRateTextbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/v_rvid"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updateScheme"
                android:text="@string/taust" />

            <Button
                android:id="@+id/fgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:onClick="updateScheme"
                android:text="@string/esiplaan" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>